# OpenInputHub

./: .gitignore  README.md  pyproject.toml
.ai/: README.md
.ai/adr/: README.md
.ai/guides/: working-rules.md
.ai/knowledge/: architecture-summary.md  glossary.md  project-map.md
.ai/research/: sdk-research.md
docs/: project-charter.md
docs/architecture/: capability-system.md  domain-model.md  event-bus.md  overview.md  plugin-architecture.md  recording-replay.md  repository-structure.md
docs/decisions/: 0001-capability-based-device-model.md  0002-normalized-input-event.md  0003-vendor-sdk-read-only.md  0004-plugin-boundary.md  0005-recording-replay-first-class.md  0006-driverless-restricted-pc-strategy.md  README.md
docs/operations/: logging.md
docs/protocol/: spacecontroller-uart-v1.md
docs/roadmap/: architecture-roadmap.md
docs/testing/: testing-strategy.md
src/openinputhub/domain/: __init__.py  conversion.py  events.py
src/openinputhub/protocol/: __init__.py  constants.py  crc.py  frame.py  messages.py  parser.py  sevenbit.py
src/openinputhub/replay/: __init__.py  capture.py  runner.py
src/openinputhub/simulation/: __init__.py  spacecontroller.py
src/openinputhub/tools/: __init__.py  replay.py
test/: test_replay_cli.py
test/domain/: test_conversion.py  test_events.py
test/protocol/: test_constants.py  test_frame.py  test_messages.py  test_parser.py  test_sevenbit.py
test/replay/: test_capture.py  test_runner.py
test/simulation/: test_spacecontroller.py
tools/spacecontrol_diag/: Makefile  README.md  main.cpp
(+1 files in other folders)
