[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "openinputhub"
version = "0.1.0"
description = "Portable input middleware and SpaceController protocol tools"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.8,<3"]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "hypothesis>=6.112,<7"]

[project.scripts]
openinputhub-replay = "openinputhub.tools.replay:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-ra"
